2012-12-27  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (find-definitions-find-symbol-or-package): Rename
	from `find-definitions-find-symbol'. Packages are not named by
	symbols and an uninterned string can refer to a package. In case
	it finds a package, return a new uninterned symbol.

2012-12-17  Stas Boukarev  <stassats@gmail.com>

	* swank-ecl.lisp (swank-mop): MOP works well now on ECL, import
	all symbols.

	* swank.lisp (thread-for-evaluation): Use INTEGER, not FIXNUM, as
	a specializer, FIXNUM is not a standard class.

2012-12-16  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (thread-for-evaluation): Make generic. Remove keyword
	arg. Don't call find-repl-thread.

2012-12-16  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-attempt-connection): Show the attempt counter.

2012-12-03  Stas Boukarev  <stassats@gmail.com>

	* swank-backend.lisp (deinit-log-output): Move from swank-sbcl,
	use it on CCL in ccl:*save-exit-functions* as well.

	* swank-allegro.lisp (macroexpand-all): USe walk-form, not walk
	on >= 8.2.
	Patch by Utz-Uwe Haus.

2012-11-23  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-edit-definition): Don't ask the user for a name
	to search if it's missing before running slime-edit-definition-hooks
	(slime-open-inspector): pop-to-buffer before inserting anything,
	otherwise the point is not moved into the desired position.

2012-11-13  Francois-Rene Rideau <tunes@google.com>

	* swank.lisp (*compile-file-for-emacs-hook*): A hook for
	compile-file-for-emacs, so that ASDF can hook its compilation
	functions.

2012-11-12  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (with-panic-handler): Abort the condition after
	closing the connection, otherwise it ends up in the slime debugger
	causing nested errors.

2012-11-11  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (interrupt-worker-thread): Solve *send-counter*
	binding problem.
	find-worker-thread: Merge with `thread-for-evaluation'.
