@@ -1,3 +1,7 @@
+2013-01-05  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-loader.lisp (init): Add a :quiet argument.
+
 2012-12-27  Stas Boukarev  <stassats@gmail.com>
 
 	* swank.lisp (find-definitions-find-symbol-or-package): Rename
